--- a/application/modules/relatorio/views/scripts/index/TableOfContentsReport.jrxml
+++ b/application/modules/relatorio/views/scripts/index/TableOfContentsReport.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.4.0.final using JasperReports Library version 6.3.1  -->
+<!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.3.1  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="fiotec" pageWidth="595" pageHeight="842" sectionType="Part" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="30" bottomMargin="30" uuid="e52780b9-8f01-4b16-86fe-712163e5aadc">
 	<property name="net.sf.jasperreports.print.create.bookmarks" value="true"/>
 	<property name="net.sf.jasperreports.export.xls.exclude.origin.keep.first.band.1" value="pageHeader"/>
@@ -103,7 +103,7 @@ WHERE id= $P{report_type} ;]]>
 					<subreportParameterExpression><![CDATA[$P{projeto_id}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="report_title">
-					<subreportParameterExpression><![CDATA[$P{report_title}]]></subreportParameterExpression>
+					<subreportParameterExpression><![CDATA[$F{titulorelatorio}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="report_type">
 					<subreportParameterExpression><![CDATA[$P{report_type}]]></subreportParameterExpression>
